--- a/src/style/style.css
+++ b/src/style/style.css
@@ -77,7 +77,7 @@ main {
 }
 
 .imagem-principal {
-    width: 30vw;
+    width: 35vw;
     height: 60vh;
 }
 
@@ -93,15 +93,17 @@ section>.card-noticia {
     margin-top: 30px;
     justify-content: left;
     display: flex;
+    justify-content: center;
     background-color: var(--white);
     width: 38vw;
     box-shadow: (var(--shadow));
-    height: 30vh;
+    height: 25vh;
 }
 
 .card-noticia>.imagem-noticia {
-    width: 180px;
-    height: 35;
+    width: 15vw;
+    height: 25vh;
+    object-fit:cover;
 }
 
 .card-noticia>.info-noticia {
@@ -158,11 +160,12 @@ section>.card-noticia {
 }
 
 
-@media(max-width: 652px) {
+@media(max-width: 722px) {
 
 
     .imagem-principal {
         width: 100vw;
+        object-fit: contain;
         margin-top: 120px;
         display: flex;
         align-items: center;
@@ -205,11 +208,10 @@ section>.card-noticia {
 
     section>.card-noticia {
         width: 80vw;
-        height: 40vh;
+        height: 25vh;
     }
 
     .card-noticia>.imagem-noticia {
         display: none;
     }
-
 }
